Fixed background moving on mobile and other optimizations

--- a/style.css
+++ b/style.css
@@ -117,14 +117,14 @@ body {
 
 #bckg {
     position: fixed;
-    min-width: 100%;
-    min-height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100vw;
+    min-height: 100vh;
     z-index: -1;
 }
 
-.glow {
-    animation: glow 2s infinite alternate ease;
-}
 .grow {
     animation: grow 2s ease;
 }
